# lab

./: .gitignore  .gitmodules  AGENTS.md  BENCHMARK_EQUIVALENCE_REPORT.md  Dockerfile  EXECUTION_MANAGEMENT.md  PERFORMANCE_BENCHMARKING.md  README.md  USER_MANUAL.md  coordinates.py  extract_nut00a.py  lab.py  main.rs  rmse_angular_precission.py  rmse_rectangular_precission.py  run.sh  summary_err_diff.py
astropy/: coordinates.py  precission.py
latest_results/: manifest.json
latest_results/2026-02-20_00-47-25/: manifest.json
latest_results/bias_precession/: astropy.json  siderust.json  summary.md
latest_results/equ_ecl/: astropy.json  libnova.json  siderust.json  summary.md
latest_results/equ_horizontal/: astropy.json  libnova.json  siderust.json  summary.md
latest_results/frame_bias/: astropy.json  siderust.json  summary.md
latest_results/frame_rotation_bpn/: astropy.json  libnova.json  siderust.json  summary.md
latest_results/gmst_era/: astropy.json  libnova.json  siderust.json  summary.md
latest_results/horiz_to_equ/: astropy.json  libnova.json  siderust.json  summary.md
latest_results/icrs_ecl_j2000/: anise.json  astropy.json  libnova.json  siderust.json  summary.md
latest_results/icrs_ecl_tod/: astropy.json  libnova.json  siderust.json  summary.md
latest_results/inv_bias_precession/: astropy.json  siderust.json  summary.md
latest_results/inv_bpn/: astropy.json  siderust.json  summary.md
latest_results/inv_equ_ecl/: astropy.json  libnova.json  siderust.json  summary.md
latest_results/inv_frame_bias/: astropy.json  siderust.json  summary.md
latest_results/inv_icrs_ecl_j2000/: anise.json  astropy.json  libnova.json  siderust.json  summary.md
latest_results/inv_icrs_ecl_tod/: astropy.json  libnova.json  siderust.json  summary.md
latest_results/inv_nutation/: astropy.json  libnova.json  siderust.json  summary.md
latest_results/inv_obliquity/: anise.json  astropy.json  libnova.json  siderust.json  summary.md
latest_results/inv_precession/: astropy.json  libnova.json  siderust.json  summary.md
latest_results/inv_precession_nutation/: astropy.json  libnova.json  siderust.json  (+1 more)
libnova/: CMakeLists.txt  README.md  performance.cpp  precission.cpp  precisson.c  utils.hpp
pipeline/: competitive_roadmap.py  horizons_client.py  orchestrator.py
pipeline/adapters/siderust_adapter/: Cargo.toml
pipeline/adapters/siderust_adapter/src/: direction_experiments.rs  main.rs
siderust/: Cargo.toml  README.md
ui/: app.py  report_generator.py  requirements.txt  results_loader.py  test_loader.py  theme.py
utils/: consts.py  metric_utils.py  out.py  rmse.py
(+369 files in other folders)
