[package]
name = "siderust-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
siderust = { path = "../../../siderust" }
qtty = { path = "../../../siderust/dev-deps/qtty/qtty" }
affn = { path = "../../../siderust/dev-deps/affn" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.34.1"

# Use the exact vendored subcrates from the siderust submodule
[patch.crates-io]
affn = { path = "../../../siderust/dev-deps/affn" }
affn-derive = { path = "../../../siderust/dev-deps/affn/affn-derive" }
cheby = { path = "../../../siderust/dev-deps/cheby" }
qtty = { path = "../../../siderust/dev-deps/qtty/qtty" }
qtty-core = { path = "../../../siderust/dev-deps/qtty/qtty-core" }
qtty-derive = { path = "../../../siderust/dev-deps/qtty/qtty-derive" }
tempoch = { path = "../../../siderust/dev-deps/tempoch" }

[profile.release]
opt-level = 3
lto = true
