[package]
name = "siderust-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
siderust = { path = "../../../siderust" }
qtty = "0.4.1"
affn = { version = "0.4.1", features = ["astro"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.34.1"

[profile.release]
opt-level = 3
lto = true
